<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top" >

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textViewWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="@dimen/text_view_size" />

        <TextView
            android:id="@+id/textViewWelcomeDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_description" />

        <Button
            android:id="@+id/buttonWelcomeCreateCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_create_counter" />
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </ListView>


</RelativeLayout>