<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditCounter" >

    <EditText
        android:id="@+id/editTextCounterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/counter_name"
        android:inputType="textCapWords" />

    <FrameLayout
        android:id="@+id/FrameLayoutPickColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextCounterName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/green" >

        <Button
            android:id="@+id/buttonPickColor"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif-light"
            android:padding="30dp"
            android:text="@string/activity_edit_counter_color"
            android:textColor="@color/white" />

    </FrameLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/FrameLayoutPickColor"
        android:layout_alignRight="@+id/FrameLayoutPickColor"
        android:layout_below="@+id/FrameLayoutPickColor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/activity_edit_save" />

</RelativeLayout>